manifests/groups/ingress-internal/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-internal-preview
spec:
  ingressClassName: nginx-internal
  rules:
  - host: app-internal-preview.env.lokalise.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-preview
            port:
              number: 80
